// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`git.repo.test --env given: [case1] default env (no --env flag) when: [t0] --what integration is run without --env then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what integration --mode apply
   ├─ keyrack: unlocked ehmpath/test
   ├─ status
   │  ├─ 💤 inflight (Xs)
   │  └─ 🎉 passed (Xs)
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test --env given: [case2] explicit --env test when: [t0] --what integration --env test is run then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what integration --mode apply
   ├─ keyrack: unlocked ehmpath/test
   ├─ status
   │  ├─ 💤 inflight (Xs)
   │  └─ 🎉 passed (Xs)
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test --env given: [case3] --env prep when: [t0] --what integration --env prep is run then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what integration --mode apply --env prep
   ├─ keyrack: unlocked ehmpath/prep
   ├─ status
   │  ├─ 💤 inflight (Xs)
   │  └─ 🎉 passed (Xs)
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test --env given: [case4] --env prod when: [t0] --what integration --env prod is run then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what integration --mode apply --env prod
   ├─ keyrack: unlocked ehmpath/prod
   ├─ status
   │  ├─ 💤 inflight (Xs)
   │  └─ 🎉 passed (Xs)
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test --env given: [case5] --env with unit tests (no keyrack needed) when: [t0] --what unit --env prep is run then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what unit --mode apply --env prep
   ├─ status
   │  ├─ 💤 inflight (Xs)
   │  └─ 🎉 passed (Xs)
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;
